<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <HorizontalScrollView
                android:id="@+id/viewPager2VVT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">
                    <ImageView
                        android:layout_marginEnd="10dp"
                        android:layout_width="500dp"
                        android:layout_height="500dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/img_20"
                        />

                    <ImageView
                        android:layout_width="500dp"
                        android:layout_height="500dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/img_21"
                         />
                </LinearLayout>

            </HorizontalScrollView>

            <TextView
                android:id="@+id/id156"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/viewPager2VVT"
                android:paddingStart="10dp"
                android:text="@string/restaurant"
                />

            <TextView
                android:id="@+id/id15174"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/id156"
                android:paddingStart="10dp"
                android:text="@string/_223_vo_van_tan"
                android:textSize="24sp"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/id151746"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/id15174"
                android:paddingStart="10dp"
                android:text="@string/open_9_00_11_00"
                 />

            <LinearLayout
                android:id="@+id/linearLayoutLocationVoVanTan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/id151746"
                android:layout_margin="10dp"
                android:orientation="horizontal">
                <androidx.cardview.widget.CardView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:backgroundTint="#C5C0C0">
                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_baseline_location_on_24"
                         />
                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:paddingStart="10dp"
                    android:text="@string/_223_vo_van_tan_district_3_ho_chi_minh_city_viet_nam"
                     />
            </LinearLayout>

            <View
                android:id="@+id/view1451"
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:layout_below="@id/linearLayoutLocationVoVanTan"
                android:layout_margin="10dp"
                android:background="#9F9D9D" />

            <LinearLayout
                android:id="@+id/linearLayoutPhoneCaoThangVoVanTan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/view1451"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:backgroundTint="#C5C0C0">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_baseline_phone_24"

                        />
                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:paddingStart="10dp"
                    android:text="@string/hotline_1900_0000"
                    />
            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewLocationVoVanTan"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_below="@+id/linearLayoutPhoneCaoThangVoVanTan"
                android:layout_margin="10dp"
                app:cardCornerRadius="8sp"
                >
                <ImageView
                    android:src="@drawable/img_23"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"

                     />
            </androidx.cardview.widget.CardView>
            <Button
                android:id="@+id/btnReserveVVT"
                android:backgroundTint="#FF9800"
                android:text="@string/contact"
                android:layout_margin="10dp"
                android:layout_below="@id/cardViewLocationVoVanTan"
                android:onClick="ShowDialogAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>
</RelativeLayout>